- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    doom3.desktop -> 1.2

--- a/doom3.desktop
+++ b/doom3.desktop
@@ -4,9 +4,8 @@ Comment=Doom 3 for linux
 Comment[pl]=Doom 3 dla Linuksa
 Comment[et]=Doom 3 Linuksile
 Exec=doom3
-Icon=doom3.png
+Icon=doom3
 Terminal=false
 Type=Application
 Categories=Game;FirstPersonGame;
-Encoding=UTF-8
 # vi: encoding=utf-8
