--- a/doom3.desktop
+++ b/doom3.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Name=Doom III
 Comment=Doom 3 for linux
-Comment[pl]=Doom 3 dla Linuksa
 Comment[et]=Doom 3 Linuksile
+Comment[pl]=Doom 3 dla Linuksa
 Exec=doom3
 Icon=doom3
 Terminal=false
 Type=Application
-Categories=Game;FirstPersonGame;
+Categories=Game;X-FPPGame;
 # vi: encoding=utf-8
